--- a/style.css
+++ b/style.css
@@ -6,3 +6,15 @@
     width: 150px;
     height: 150px;
 } 
+.fa-brands fa-html5 {
+    width: 500px;
+    height: 500px;
+}
+.job__logo{
+    width: 100px;
+    heigth: 100px;
+}
+.job__logo2{
+    width: 100px;
+    height: 100px;
+}
