--- a/style.css
+++ b/style.css
@@ -26,8 +26,34 @@
     --weight-bold: 700;
     --weight-semi-bold: 600;
     --weight-regular: 400;
+
+    /* SIZE */
+    --size-boder-radius: 4px;
   }
-  
+  {
+      box-sizing: border-box;
+  }
+  body{
+      margin: 0;
+      cursor: default;
+      
+
+    
+  }
+  a {
+     margin: 0;
+    text-decoration: none;
+    color:var(--color-white)
+  }
+  .navbar__logo {
+      margin: 0 0;
+      padding: 0 0;
+  }
+  ul{
+      list-style: none;
+      padding-left: 0;
+
+  }
   /* Typography */
   
   h1 {
@@ -57,3 +83,41 @@
     color: var(--color-black);
     margin: 4px 0;
   }
+  #navbar {
+      display: flex;
+      justify-content: space-between;
+      background-color: var(--color-pink);
+      align-items: center;
+      color:var(--color-white)
+      padding: 16px;
+  }
+.navbar__menu{
+    display: flex;
+    color: white;
+    
+
+}
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-boder-radius);
+
+}
+.logo {
+     width: 20px;
+     height: 20px;
+}
+.navar__logo {
+    font-size: var(--font-medium)
+    font-weight: var(--weight-semi-bold)
+}
+.navbar__menu__item.active {
+    border: 1px solid white;
+    border-radius: var(--size-boder-radius)
+
+
+}
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-pink);
+}
