--- a/style.css
+++ b/style.css
@@ -29,10 +29,8 @@
 
     /* SIZE */
     --size-boder-radius: 4px;
-  }
-  {
-      box-sizing: border-box;
-  }
+  
+   box-sizing: border-box;
   body{
       margin: 0;
       cursor: default;
@@ -40,6 +38,7 @@
 
     
   }
+}
 
   button {
       background-color: transparent;
@@ -60,7 +59,7 @@
   }
   ul{
       list-style: none;
-      padding-left: 0;
+ padding-left: 0;
 
   }
   /* Typography */
@@ -156,4 +155,18 @@
     border: 2px solid var(--color-white);
     border-radius: var(--size-boder-radius)
     
+}
+/* Section common */
+.section  {
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin:auto;
+}
+/* About */
+.about__majors {
+    display: flex;
+    justify-content: center;
+    
+   
 }
