--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@
     --size-boder-radius: 4px;
   
    box-sizing: border-box;
+
+   /* Animation*/
+   --animation-duration: 300ms;
   body{
       margin: 0;
       cursor: default;
@@ -166,7 +169,67 @@
 /* About */
 .about__majors {
     display: flex;
-    justify-content: center;
-    
+    justify-content: space-between;
+    margin: 80px 0;
    
+}
+
+.major__icon {
+    width: 170px;
+    height: 170px;
+    font-size: 70px;
+    line-height: 170px;
+    margin: auto;
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin-bottom: 16px;
+    color: var(--color-blue);
+}
+
+.major__title, .major__description {
+  color: var(--color-dark-grey);
+
+}
+.major__icon i {
+    transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i {
+    color: var(--color-pink);
+    transform: rotate(-30deg) scale(1.1);
+}
+.major__description {
+    font-size: var(--font-small);
+}
+
+.job {
+    display: flex;
+    align-items: center;
+
+}
+.job__logo {
+    width: 100px;
+    height: 100px;
+}
+.job__logo2 {
+    width: 100px;
+    height: 100px;
+}
+.job__description {
+    margin: 0 16px;
+    text-align: left;
+
+}
+.job__name, .job__period {
+    color:var(--color-light-grey);
+
+}
+
+.job__name {
+    font-size: var(--font-small);
+
+}
+
+.job__period {
+    font-size: var(--font-micro);
+
 }
