--- a/style.css
+++ b/style.css
@@ -163,8 +163,12 @@
 .section  {
     padding: 50px;
     text-align: center;
-    max-width: 1200px;
     margin:auto;
+}
+.section__container {
+    max-width: 1200px;
+    margin: auto;
+
 }
 /* About */
 .about__majors {
@@ -232,4 +236,58 @@
 .job__period {
     font-size: var(--font-micro);
 
+}
+#skills {
+    background-color: var(--color-yellow);
+}
+.skillset {
+    display: flex;
+    background-color: var(--color-light-grey);
+    color: var(--color-light-white);
+    margin: 20px 0;
+    
+}
+.skillset__left {
+   flex-basis: 60%;
+   background-color: var(--color-dark-grey);
+   padding: 20px 40px;
+}
+.skillset__title {
+    color: var(--color-white);
+}
+
+
+.skillset__right {
+   flex-basis: 40%;
+   
+}
+.tools {
+    background-color: var(--color-grey);
+    
+    
+}
+
+.skill__description {
+    display: flex;
+    justify-content: space-between;
+}
+
+.skill__bar {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-grey);
+}
+
+.skill {
+    margin-bottom: 32px;
+}
+
+.skill__value {
+    height: 3px;
+    background-color: var(--color-orange);
+}
+
+.tools, .etc {
+    padding: 20px;
+    
 }
