--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@
 
   }
   a {
-     margin: 0;
+     
     text-decoration: none;
     color:var(--color-white)
-    size: 50px 50px;
+    
   }
   .navbar__logo {
       margin: 0 0;
@@ -123,15 +123,26 @@
     font-size: var(--font-medium)
     font-weight: var(--weight-semi-bold)
 }
-.navbar__menu__item.active {
-    border: 1px solid white;
-    border-radius: var(--size-boder-radius)
+ 
 
 
-}
+
 .navbar__menu__item:hover {
     background-color: var(--color-yellow);
 }
+
+.navbar__toggle-btn {
+    position: absolute;
+    right: 32px;
+    
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+    
+}
+
+
+/* Home */
 #home {
     background: url('imgs/home-background.png') center/cover no-repeat;
     padding: 40px;
@@ -140,7 +151,7 @@
 .home__avatar {
     width: 250px;
     height: 250px;
-    border-radius: 40%;
+    border-radius: 50%;
     border: 2px solid var(--color-light-white);
 }
 
@@ -455,4 +466,40 @@
 .contact__links i:hover {
     transform: scale(1.1);
     color: var(--color-blue);
+}
+
+/* For below 768px screen width */
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+
+
+
+#navbar {
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.navbar__menu {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    display: none;
+}
+ .about__majors {
+     flex-direction: column;
+ }
+ 
+ .major {
+     margin: 38px;
+ }
+
+ .skillset {
+     flex-direction: column;
+ }
+
+ .project {
+     flex-grow 1;
+ } 
 }
