--- a/style.css
+++ b/style.css
@@ -95,13 +95,23 @@
     margin: 4px 0;
   }
   #navbar {
-      display: flex;
+      position: fixed;
+    display: flex;
+    width: 100%;
       justify-content: space-between;
-      background-color: var(--color-dark-white);
+      background-color: transparent;
       align-items: center;
       color:var(--color-white)
-      padding: 16px;
+      padding : 16px;
+      transition: all var(--animation-duration) ease-in-out;
   }
+
+#navbar.navbar--dark {
+    background-color: var(--color-light-grey);
+    paddig: 8px;
+
+}
+
 .navbar__menu{
     display: flex;
     color: var(--color-grey);
@@ -147,6 +157,7 @@
     background: url('imgs/home-background.png') center/cover no-repeat;
     padding: 40px;
     text-align: center;
+    padding-top: 120px;
 }
 .home__avatar {
     width: 250px;
