--- a/style.css
+++ b/style.css
@@ -34,13 +34,7 @@
 
    /* Animation*/
    --animation-duration: 300ms;
-  body{
-      margin: 0;
-      cursor: default;
-      
-
-    
-  }
+  
 }
 
   button {
@@ -101,15 +95,16 @@
       justify-content: space-between;
       background-color: transparent;
       align-items: center;
-      color:var(--color-white)
+      color:var(--color-white);
       padding : 16px;
       transition: all var(--animation-duration) ease-in-out;
       z-index: 1;
+      background-color: var(--color-light-grey);
   }
 
 #navbar.navbar--dark {
     background-color: var(--color-light-grey);
-    paddig: 8px;
+   padding: 16px;
 
 }
 
@@ -119,10 +114,16 @@
     
 
 }
+
+.navbar__menu.open {
+    display: block;
+}
 .navbar__menu__item {
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    color: var(--color-white);
+    border: 1px solid transparent;
     border-radius: var(--size-boder-radius);
 
 }
@@ -130,16 +131,19 @@
      width: 20px;
      height: 20px;
 }
-.navar__logo {
-    font-size: var(--font-medium)
-    font-weight: var(--weight-semi-bold)
+.navbar__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+    color:white;
 }
  
 
 
 
 .navbar__menu__item:hover {
-    background-color: var(--color-yellow);
+    border: 1px solid white; 
+    background-color: var(--color-orange);
+    border-radius: var(--size-boder-radius);
 }
 
 .navbar__toggle-btn {
@@ -173,7 +177,7 @@
 }
 
 .home__contact {
-      color: var(--color-white)
+      color: var(--color-white);
     font-size: var(--font-regular);
     font-weight: var(--weight-bold);
     margin: 24px;
@@ -324,12 +328,12 @@
     font-size: var(--font-regular);
     padding: 8px 48px;
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-grey);
     color: var(--color-white);
 }
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
@@ -353,7 +357,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-out;
+
 }
+.work__projects.anim-out {
+    opacity: 0;
+    transform: scale(0.9) translateY(40px);
+}
+
 
 .project {
     position: relative;
@@ -366,6 +378,9 @@
    background-color: var(--color-light-white) ;
     
 
+}
+.project.invisible {
+    display: none;
 }
 
 .project_img {
@@ -394,7 +409,7 @@
     transform: translateY(0px);
 }
 .project__description h3 {
-    color: var(--color-white);
+    color: orange;
 }
 
 .project__description h3:after {
@@ -402,9 +417,10 @@
     position: relative;
     display: block;
     left:50%;
-    width: 25px;
+    width: 100px;
+    transform: translateX(-50%);
     height: 2px;
-    margin-left: -12px;
+    
     margin-top: 8px;
     background-color: var(--color-dark-white);
 }
@@ -479,6 +495,30 @@
     transform: scale(1.1);
     color: var(--color-blue);
 }
+/* Scroll */
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+    color: var(--color-white);
+    background-color: var(--color-dark-grey);
+    border-radius: 50%;
+    opacity:0;
+    pointer-events: none;
+    transition: opacity 300ms ease-in;
+
+}
+.arrow-up.visible {
+    opacity: 1;
+    pointer-events: auto;
+    
+}
+
+
+
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
@@ -512,6 +552,6 @@
  }
 
  .project {
-     flex-grow 1;
+     flex-grow: 1;
  } 
 }
