--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@
   a {
      
     text-decoration: none;
-    color:var(--color-white)
+    color:var(--color-white);
+    
     
   }
   .navbar__logo {
@@ -99,7 +100,7 @@
       padding : 16px;
       transition: all var(--animation-duration) ease-in-out;
       z-index: 1;
-      background-color: var(--color-light-grey);
+      
   }
 
 #navbar.navbar--dark {
@@ -132,7 +133,7 @@
      height: 20px;
 }
 .navbar__logo {
-    font-size: var(--font-medium);
+    font-size: var(--font-small);
     font-weight: var(--weight-semi-bold);
     color:white;
 }
@@ -159,7 +160,7 @@
 
 /* Home */
 #home {
-    background: url('imgs/home-background.png') center/cover no-repeat;
+    background: url('imgs/background3.png') center/cover no-repeat;
     padding: 40px;
     text-align: center;
     padding-top: 120px;
@@ -185,6 +186,10 @@
     border: 2px solid var(--color-white);
     border-radius: var(--size-boder-radius)
     
+}
+
+.home__contact:hover {
+    background-color: #f3af4a;
 }
 /* Section common */
 .section  {
@@ -327,6 +332,7 @@
     border-radius: var(--size-boder-radius);
     font-size: var(--font-regular);
     padding: 8px 48px;
+    position: relative;
 }
 .category__btn.selected,
 .category__btn:hover {
@@ -346,9 +352,9 @@
     height: 24px;
     line-height: 24px;
     display: inline-block;
-    position: relative;
+    position: absolute;
     top:-20px;
-    left: 4px;   
+    right: 8px;   
     opacity: 0;
     transition: all var(--animation-duration) ease-in; 
 }
@@ -474,7 +480,7 @@
 
 #contact {
     background-color: var(--color-dark-grey);
-
+  padding: 5px;
 }
 
 .contact__title, .contact__email, .contact__rights{
@@ -482,12 +488,12 @@
 }
 
 .contact__title {
-    margin: 32px;
+    margin: 5px;
 }
 
 .contact__links {
     font-size: var(--font-large);
-    margin: 24px;
+    margin: 5px;
     transition: all var(--animation-duration) ease-in;
 }
 
@@ -522,8 +528,21 @@
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  :root {
+
+    /* Font size */
+    --font-large: 20px;
+    --font-medium: 15px;
+    --font-regular: 10px;
+    --font-small: 7px;
+    --font-micro: 5px;
+  }
+
     .navbar__toggle-btn {
         display: block;
+        top: 20px;
+        right: 50px;
+        font-size: var(--font-medium);
     }
 
 
@@ -541,12 +560,18 @@
 }
  .about__majors {
      flex-direction: column;
+     margin: 30px;
+     margin-bottom: 0px;
  }
  
  .major {
-     margin: 38px;
+     margin: 30px;
  }
 
+ .category__btn {
+    margin: 4px 0;
+    width: 100%
+ }
  .skillset {
      flex-direction: column;
  }
@@ -554,4 +579,45 @@
  .project {
      flex-grow: 1;
  } 
+ .job__logo, .job__logo2 {
+    width: 60px;
+    height: 60px;
+ }
+.testimonial {
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonial__avatar {
+    
+    width: 80px;
+    height: 80px;
+    
+    
+}
+.testimonial__speech-bubble {
+    order: 1;
+}
+.testimonial__avatar:nth-child(even),.testimonial__avatar:nth-child(odd){
+    margin: 0;
+    margin-bottom: 10px;
+}
+.arrow-up {
+    width: 40px;
+    height:40px;
+    font-size: 25px;
+    line-height: 40px;
+    right: 16px;
+    bottom: 16px;
+
+}
+.navbar__logo {
+    font-size: 18px;
+    
+}
+.section {
+    padding-top:40px;
+    padding:16px;
+    
+}
 }
