--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@
       transition: all var(--animation-duration) ease-in-out;
       z-index: 1;
       
+      
   }
 
 #navbar.navbar--dark {
@@ -112,7 +113,7 @@
 .navbar__menu{
     display: flex;
     color: var(--color-grey);
-    
+    margin-right: 30px;
 
 }
 
@@ -124,9 +125,12 @@
     margin: 0 4px;
     cursor: pointer;
     color: var(--color-white);
-    border: 1px solid transparent;
+    
     border-radius: var(--size-boder-radius);
 
+}
+.navbar__menu__item.active {
+  border: 1px solid var(--color-white);
 }
 .logo {
      width: 20px;
